Fix overflowing website

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -8,7 +8,6 @@
 
 #root {
 	font-family: 'Lato', sans-serif;
-	height: 100vh;
 	background-color: white;
 	overflow-x: hidden;
 	scroll-behavior: smooth;
